tests/negative/optimizer/div-zero-float.orng
fn main() -> Float
    1.0 / 0.0